# proyecto_integrador_52

./: .gitignore  README.md  pyproject.toml
configs/data/: default.yaml
configs/model/: baseline.yaml
configs/train/: default.yaml
docs/: datasets.md  index.html  research_questions.md
docs/reports/: 02_reporte_feature_engineering.html  reader.html
notebooks/: 00_exploracion_scared.ipynb  01_exploracion_inicial_reflejos.ipynb  02_hamlyn_eda.ipynb  03_eda_calidad_input.ipynb  Avance1_Equipo52_02_hamlyn_eda.ipynb  Avance2_52_Feature_Engineering.ipynb  Avance2_Equipo_52_02_hamlyn_eda.ipynb  Avance2_Equipo_52_03_eda_calidad_input.ipynb  eda_scared.py
outcomes/eda_outputs/: 03_depth_stats.csv  08_rgb_stats.csv  18_especulares.csv  20_tabla_iluminacion.csv
outputs/hamlyn/: hamlyn_resumen_ejecutivo.txt
outputs/hamlyn/figures/: README.md
outputs/hamlyn/tables/: README.md  hamlyn_correlation_matrix.csv  hamlyn_depth_summary_by_sequence.csv  hamlyn_download_inventory.csv  hamlyn_filetype_summary.csv  hamlyn_intrinsics_summary.csv  hamlyn_relevant_correlations.csv  hamlyn_resolution_summary.csv  hamlyn_rgb_summary_by_sequence.csv  hamlyn_rubric_response.csv  hamlyn_temporal_summary_by_sequence.csv
reports/: 00_reporte_exploracion_c3vdv2.md  00_reporte_exploracion_scared.md  01_reporte_eda_iluminacion.html  01_reporte_eda_iluminacion.md  02_reporte_feature_engineering.html  02_reporte_feature_engineering.md  04_reporte_EDA_c3vdv2.md
scripts/: bootstrap_experiment.py
site/: index.html
src/laluzqueopaca/: __init__.py
tests/: test_metrics.py
(+10 files in other folders)
